Fix logo filename casing in HTML

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <aside class="kc-sidebar">
       <div class="kc-sidebar-header">
         <div class="kc-logo-circle">
-          <img src="hhc-logo.png" alt="Holiday Hack Challenge Logo" class="kc-logo-img">
+          <img src="HHC-logo.png" alt="Holiday Hack Challenge Logo" class="kc-logo-img">
         </div>
         <div class="kc-logo-text">
           <span class="kc-game-title">SANS Holiday Hack Challenge 2025:</span>
