--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <a href="#obj-victory" class="kc-nav-item" data-pane="obj-victory" data-url="obj/victory.html">Victory</a>
 
         <!-- bottom menu -->
-        <a href="#easter-eggs" class="kc-nav-item" data-pane="easter-eggs">Easter Eggs</a>
+        <a href="#easter-eggs" class="kc-nav-item" data-pane="easter-eggs" data-url="pages/easter-eggs.html">Easter Eggs</a>
       </nav>
     </aside>
 
@@ -458,8 +458,6 @@ curl -X POST https://example/snowblind/api \
     <!-- NEW: floating scroll-to-top button -->
     <button class="kc-scroll-top" id="kcScrollTop" aria-label="Scroll to top">▲ Top</button>
   </div>
-
-
 
 <script>
 // YouTube Pause/Play when leaving or returning to Home tab – FIXED & ROBUST
@@ -1800,6 +1798,11 @@ document.addEventListener("DOMContentLoaded", function () {
     ],
     "obj-snowblind-ambush": [
       "torkelopsahl_victory_0.mp3"
+    ],
+    "easter-eggs": [
+      "achievement-popup-ukulele-04.mp3",
+      "jason_initial_0.mp3",
+      "jason_initial_1.mp3"
     ]
 
   };
@@ -2023,9 +2026,6 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 </script>
-
-
-
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
