--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
   <meta charset="UTF-8" />
-  <title>HHC 2025 – Kringle Console Write-Up</title>
+  <title>HHC 2025 – REVENGE OF THE GNOME(s) walkthrough</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-tomorrow.min.css">
